objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Quip Document Link for the Account Plan</description>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Applied/Intake</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Exited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Summary__c</fullName>
        <label>Client Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Remaining__c</fullName>
        <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
        <formula>CreditLimit__c -  Credit_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donor_Id__c</fullName>
        <label>Donor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grantee_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grantee Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Matching_Gift_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Matching Gift Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Salutation__c</fullName>
        <label>Household Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>NGO_Base_Contact_Picture_URL__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Date__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maps_Advanced_Route_Visit_Windows__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SPM Maps Advanced lookup field on the SPM Maps Account page to show how visit windows can be created and used specifically across objects or directly related to a single unique object, e.g., an Account that has a specific visit window constraint that must be taken into consideration when routing, i.e., Friday between 9-11 AM EST only.</description>
        <inlineHelpText>Create a Visit Window that indicates the ideal visit days and times for a specific customer.  Maps Advanced will ensure all future visits are made within these windows during routing optimization.  Created by: Aaron Bendickson Aug, 18 2023</inlineHelpText>
        <label>Maps Advanced Route Visit Windows</label>
        <referenceTo>maps__AdvRouteVisitWindows__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Percentage__c</fullName>
        <label>Matching Gift Percentage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Matching_Gift_Amount__c</fullName>
        <label>Max Matching Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGO_Base_Profile_Photo__c</fullName>
        <description>WHAT: Formula field for displaying image uploaded to Contact record.
WHO: Brian Ricter | Q Branch
WHEN: 242.1</description>
        <formula>IMAGE(IF(!ISBLANK(NGO_Base_Contact_Picture_URL__pc),NGO_Base_Contact_Picture_URL__pc, &quot;https://sfdo-ngo-ido.s3.us-east-2.amazonaws.com/ASTRO-Lionheart-PawOutLeft-SFS21-sRGB.png&quot;), &quot;Profile Photo for this Account&quot;,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_FR_Preferences__c</fullName>
        <label>Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Do Not Mail</fullName>
                </value>
                <value>
                    <fullName>Do Not Solicit</fullName>
                </value>
                <value>
                    <fullName>Email Opt Out</fullName>
                </value>
                <value>
                    <fullName>No Direct Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NGO_Fundraising_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household Acount</description>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities_Amount__c</fullName>
        <label>Open Opportunities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonContact_Id__c</fullName>
        <formula>CASESAFEID(PersonContact.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonContact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quip_URL__c</fullName>
        <description>Quip Document Link for General Quip URLs</description>
        <label>Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Account_Priority__c</fullName>
        <description>What: used in Reporting</description>
        <formula>IF( ( AnnualRevenue &gt;20000000),&quot;High Priority&quot;, IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Analytics_Latest_Sentiment__c</fullName>
        <description>This field is used for Data Pipelines demo. Added June 2021.</description>
        <label>Latest Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <description>What: used on the Account - Partner Page layout to detail the partner application date.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_CPQ_Churn_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Included on the CPQ Layout to identify Churn Risk</description>
        <label>Churn Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: used on the partner account page layout.</description>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Current_Year_Target__c</fullName>
        <description>What: Roll-up summary of the &quot;Target&quot; field on any Channel Plan marked as &quot;Active&quot;.</description>
        <label>Current Year Target</label>
        <summarizedField>SFDC_Channel_Account_Plan__c.Target__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Channel_Account_Plan__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Channel_Account_Plan__c.SDO_Experience_Partner_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Days_Since_Activity__c</fullName>
        <description>What: used in reports for days since last activity</description>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Default_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used on the Account - Community Page layout to detail Default Location information. Lookup to Location Object</description>
        <label>Default Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Default_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Default Price Book for Account reference.</description>
        <inlineHelpText>Default price book for work orders</inlineHelpText>
        <label>Default Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Adv_Maps_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SPM Maps Advanced Routing User Assignment Lookup Field - makes it easier to demo advanced maps routing/visit plans by simplifying the assignment and configuration.  Added by: Aaron Bendickson Aug 18, 2023</description>
        <label>Adv Maps User Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Dataset_Split__c</fullName>
        <description>SDO Maps Account number field to split maps-related datasets equally and easily 02-02-23</description>
        <label>Account Dataset Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Days_Since_Last_Visit__c</fullName>
        <description>SDO MAPS number field to represent days since visited Accounts in territories.  This highlights neglected accounts easily in reports and visually in Maps. 02-02-23</description>
        <label>Days Since Last Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Segment_c__c</fullName>
        <description>SDO MAPS segment field for maps &amp; territory planning segmentation use cases 02-02-23</description>
        <label>Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Service_Tier__c</fullName>
        <description>SDO MAPS service tier data field for service use cases in Maps and Territory Planning.  02-02-23 AB</description>
        <label>Service Tier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tag__c</fullName>
        <description>SPM MAPS Account dataset tag to help manage datasets in Maps and Territory Planning.  02-03-23 AB</description>
        <label>Tag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tier__c</fullName>
        <description>SDO MAPS tier field for maps routing and territory planning optimization and segmentation scenarios. 02-02-23 AB</description>
        <label>Maps Tier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Time_Per_Visit_c__c</fullName>
        <description>SDO MAPS number field to represent the suggested time per visit per Account or Location when visit/route planning.  Used in Maps Advanced route planning, Maps, and Territory Planning use cases. 02-02-23</description>
        <label>Time Per Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Visit_Frequency__c</fullName>
        <description>SDO MAPS visit frequency field used in Maps Advanced routing optimization use cases to determine how often to visit an Account location, e.g., 1 = once a month, 4 = weekly, 2 = 2 times per month.  02-02-23 AB</description>
        <label>Visit Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_AA_User_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Maps field for assigning a user to the account. Who: Aaron Bendickson. When: Sept, 2021.</description>
        <label>Maps - User Territory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_District__c</fullName>
        <description>Used in Salesforce Maps demo for maps external data sets</description>
        <label>Maps Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_TAM__c</fullName>
        <description>A number attribute field (Total Addressable Market) used to balance Accounts equally across territories</description>
        <label>TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_Territory__c</fullName>
        <description>Used in Salesforce Maps demo for maps external data sets</description>
        <label>Territory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of Active Leads for Partner Account</description>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number open opportunities owned by the current partner account</description>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Operating_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup field to Operating Hours Object</description>
        <inlineHelpText>If the customer has defined visiting hours, select them here.</inlineHelpText>
        <label>Operating Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Partner_Certification__c</fullName>
        <description>What: Used for Partner Certification Information</description>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Geographic_Coverage__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Program_Level__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Type__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                    <default>true</default>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partnership_Status__c</fullName>
        <description>What: Used on the Account - Partner page layout to show the partnership status</description>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SFS_Default_Field_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS Field for Default Field Entitlement
Who: FSL team</description>
        <inlineHelpText>Select the default field service entitlement to use for this account and all of its assets</inlineHelpText>
        <label>Default Field Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: FSL/SFS Field for Service Territory</description>
        <inlineHelpText>What service territory is this account located in</inlineHelpText>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_ShippingGeo__c</fullName>
        <description>What: SFS/FSL Field used for Shipping Geo location</description>
        <label>ShippingGeo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS/FSL Field for Work Type reference.
Who: SFS Team</description>
        <inlineHelpText>Default work type to use for this account for field service activity</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type_for_Quote_Creation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS/FSL Work Type for Quote Creation Field.
Who: SFS Field</description>
        <label>Work Type for Quote Creation</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts (Work Type for Quote Creation)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Area_Auto_Calc__c</fullName>
        <description>SPM Sales Planning demo field 9-5-23 Aaron Bendickson</description>
        <formula>CASE( BillingState ,&quot;AL&quot;, &quot;Southeast&quot;,&quot;AK&quot;, &quot;Northwest&quot;,&quot;AZ&quot;, &quot;Southwest&quot;,&quot;AR&quot;, &quot;South&quot;,&quot;CA&quot;, &quot;Southwest&quot;,&quot;CO&quot;, &quot;Midwest&quot;,&quot;CT&quot;, &quot;Northeast&quot;,&quot;DE&quot;, &quot;Northeast&quot;,&quot;DC&quot;, &quot;Northeast&quot;,&quot;FL&quot;, &quot;Southeast&quot;,&quot;GA&quot;, &quot;Southeast&quot;,&quot;HI&quot;, &quot;Southwest&quot;,&quot;ID&quot;, &quot;Northwest&quot;,&quot;IL&quot;, &quot;Northeast&quot;,&quot;IN&quot;, &quot;Northeast&quot;,&quot;IA&quot;, &quot;Midwest&quot;,&quot;KS&quot;, &quot;Midwest&quot;,&quot;KY&quot;, &quot;Northeast&quot;,&quot;LA&quot;, &quot;South&quot;,&quot;ME&quot;, &quot;Northeast&quot;,&quot;MD&quot;, &quot;Northeast&quot;,&quot;MA&quot;, &quot;Northeast&quot;,&quot;MI&quot;, &quot;Northeast&quot;,&quot;MN&quot;, &quot;Midwest&quot;,&quot;MS&quot;, &quot;Southeast&quot;,&quot;MO&quot;, &quot;Midwest&quot;,&quot;MT&quot;, &quot;Northwest&quot;,&quot;NE&quot;, &quot;Midwest&quot;,&quot;NV&quot;, &quot;Southwest&quot;,&quot;NH&quot;, &quot;Northeast&quot;,&quot;NJ&quot;, &quot;Northeast&quot;,&quot;NM&quot;, &quot;Southwest&quot;,&quot;NY&quot;, &quot;Northeast&quot;,&quot;NC&quot;, &quot;Southeast&quot;,&quot;ND&quot;, &quot;Midwest&quot;,&quot;OH&quot;, &quot;Northeast&quot;,&quot;OK&quot;, &quot;South&quot;,&quot;OR&quot;, &quot;Northwest&quot;,&quot;PA&quot;, &quot;Northeast&quot;,&quot;RI&quot;, &quot;Northeast&quot;,&quot;SC&quot;, &quot;Southeast&quot;,&quot;SD&quot;, &quot;Midwest&quot;,&quot;TN&quot;, &quot;Southeast&quot;,&quot;TX&quot;, &quot;South&quot;,&quot;UT&quot;, &quot;Southwest&quot;,&quot;VT&quot;, &quot;Northeast&quot;,&quot;VA&quot;, &quot;Northeast&quot;,&quot;WA&quot;, &quot;Northwest&quot;,&quot;WV&quot;, &quot;Northeast&quot;,&quot;WI&quot;, &quot;Northeast&quot;,&quot;WY&quot;, &quot;Northwest&quot;,&quot;AB&quot;, &quot;West&quot;,&quot;BC&quot;, &quot;West&quot;,&quot;MB&quot;, &quot;Central&quot;,&quot;NB&quot;, &quot;East&quot;,&quot;NL&quot;, &quot;East&quot;,&quot;NT&quot;, &quot;North&quot;,&quot;NS&quot;, &quot;East&quot;,&quot;NU&quot;, &quot;North&quot;,&quot;ON&quot;, &quot;Central&quot;,&quot;PE&quot;, &quot;East&quot;,&quot;QC&quot;, &quot;East&quot;,&quot;SK&quot;, &quot;Central&quot;,&quot;YT&quot;, &quot;North&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated Area based on the Billing State value.</inlineHelpText>
        <label>Area (Auto-Calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Area_Formatted__c</fullName>
        <description>SPM Sales Planning demo field 9-5-23 Aaron Bendickson</description>
        <formula>SDO_SPM_Region_Auto_Calc__c + &quot;-&quot; + SDO_SPM_Segment_Auto_Calc__c + &quot;-&quot; + SDO_SPM_Area_Auto_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combines Region, Segment and Area to create a formatted Area name.</inlineHelpText>
        <label>Area (Formatted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Billing_Country_Code__c</fullName>
        <label>Billing Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Hardware_Revenue__c</fullName>
        <description>SPM Sales Planning Demo Field 9-5-23 Aaron Bendickson</description>
        <label>Hardware Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Open_Opportunity_Value__c</fullName>
        <description>SPM Sales Planning Demo Field 9-5-23 Aaron Bendickson</description>
        <label>Open Opportunity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>